# PyTables

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ANNOUNCE  ANNOUNCE-spanish.txt  ANNOUNCE.txt  ANNOUNCE.txt.in  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE  LICENSE-development.txt  LICENSE-evaluation.txt  LICENSE-personal.txt  LICENSE-site.txt  LICENSE.txt  LICENSE_SUMMARY.txt  MANIFEST.in  MIGRATING_TO_2.X.txt  MIGRATING_TO_2.x.txt  Makefile  Makefile_windows  README.md  README.rst  README.rst.txt  README.txt  README_h5py.txt  RELEASE-NOTES.txt  RELEASE-NOTES.txt.in  RELEASE_NOTES.rst  RELEASE_NOTES.txt  SECURITY.md  THANKS  TODO.txt  VERSION  a.out  (+15 more)
.github/: dependabot.yml
LICENSES/: BLOSC.txt  CLOUD-SPTHEME.txt  H5PY.txt  HDF5.txt  LRUCACHE.txt  LZ4.txt  NUMEXPR.txt  PTHREADS-WIN32.txt  STDINT.txt  WIN32PTHREADS.txt
bench/: 100-trillion-baby.py  LRU-experiments.py  LRU-experiments2.py  LRUcache-node-bench.py  NetCDF-bench.py  b2nd_compare_getslice.py  b2nd_compare_getslice_plot.py  bench-postgres-ranges.sh  bench-pytables-ranges.sh  bench-pytables.sh  blosc.py  bsddb-table-bench.py  cacheout.py  chunkshape-bench.py  chunkshape-testing.py  collations.py  complex_search.py  copy-bench.py  create-large-number-objects.py  deep-tree-h5py.py  deep-tree.py  direct-chunking-AMD-7800X3D.ipynb  evaluate.py  expression.py  fetch_meteo_data.py  get-figures-ranges.py  get-figures.py  indexed_search.py  keysort.py  lookup_bench.py  multiprocess_read_array.py  numexpr_boolean_timing.py  open_close-bench-gzip.h5  open_close-bench.py  open_close-bench2.py  opteron-stress-test.txt  optimal-chunksize.py  plot-bar.py  plot-comparison-lzo-zlib-ucl.gnuplot  plot-comparison-psyco-lzo.gnuplot  (+35 more)
bench_h5py_backend/: inkernel.py
blosc/: blosc.c  blosc.h  blosc_filter.c  blosc_filter.h  blosclz.c  blosclz.h  shuffle.c  shuffle.h
c-blosc/: .gitignore  .mailmap  .travis.yml  ANNOUNCE.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPILING_WITH_WHEELS.rst  CONTRIBUTING.md  README.md  README.rst  README_HEADER.rst  RELEASE_NOTES.rst  RELEASING.rst  THANKS.rst  THOUGHTS_FOR_2.0.txt  appveyor.yml  blosc.pc.in  build.py  conanfile.py
c-blosc/.github/workflows/: cmake.yml  fuzz.yml
c-blosc/LICENSES/: BLOSC.txt  LZ4.txt
c-blosc/appveyor/vs2008_x86-64_patch/: README.md  setup_x64.bat
c-blosc/bench/: CMakeLists.txt  Makefile  Makefile.mingw  bench.c  plot-speeds.py
c-blosc/blosc/: CMakeLists.txt  bitshuffle-avx2.c  bitshuffle-avx2.h  bitshuffle-generic.c  bitshuffle-generic.h  bitshuffle-sse2.c  bitshuffle-sse2.h  blosc-common.h  blosc-comp-features.h  blosc.c  blosc.h  blosclz.c  blosclz.h  blosclz_impl.inc  config.h.in  fastcopy.c  fastcopy.h  shuffle-avx2.c  shuffle-avx2.h  shuffle-common.h  shuffle-generic.c  shuffle-generic.h  shuffle-sse2.c  shuffle-sse2.h  shuffle.c  shuffle.h
c-blosc/blosc/win32/: pthread.c  pthread.h
c-blosc/cmake/: FindLZ4.cmake  FindSSE.cmake  FindZstd.cmake
c-blosc/compat/: CMakeLists.txt  README.rst  blosc-1.11.1-blosclz.cdata  blosc-1.11.1-lz4.cdata  blosc-1.11.1-lz4hc.cdata  blosc-1.11.1-snappy.cdata  blosc-1.11.1-zlib.cdata  blosc-1.11.1-zstd.cdata  blosc-1.14.0-snappy.cdata  blosc-1.14.0-zlib.cdata  blosc-1.18.0-blosclz-bitshuffle.cdata  blosc-1.18.0-blosclz.cdata  blosc-1.18.0-lz4-bitshuffle.cdata  blosc-1.18.0-lz4hc.cdata  blosc-1.18.0-zstd.cdata  blosc-1.3.0-blosclz.cdata  blosc-1.7.0-blosclz.cdata  blosc-1.7.0-lz4.cdata  blosc-1.7.0-lz4hc.cdata  blosc-1.7.0-snappy.cdata  blosc-1.7.0-zlib.cdata  filegen.c
c-blosc/examples/: many_compressors.c  multithread.c  noinit.c  simple.c  win-dynamic-linking.c
c-blosc/hdf5/: CMakeLists.txt  README.rst  blosc_filter.c  blosc_plugin.h  example.c
c-blosc/internal-complibs/lz4-r110/: add-version.patch  lz4.h
c-blosc/internal-complibs/lz4-r113/: lz4.h  lz4hc.h
c-blosc/internal-complibs/snappy-1.1.1/: add-version.patch  msvc1.patch  msvc2.patch  snappy-c.h  snappy-stubs-public.h  snappy.h
c-blosc/internal-complibs/zlib-1.2.11/: gzguts.h
c-blosc/internal-complibs/zlib-1.2.8/: gzguts.h
c-blosc/internal-complibs/zstd-1.1.3/dll/example/: build_package.bat
c-blosc/internal-complibs/zstd-1.3.3/dll/example/: build_package.bat
c-blosc/test_package/: CMakeLists.txt  conanfile.py  example.cpp
c-blosc/tests/: CMakeLists.txt  Makefile  check_symbols.py  gcc-segfault-issue.c  print_versions.c  test_all.sh  test_api.c  test_basics.c  test_bitshuffle_leftovers.c  test_common.h  test_compress_roundtrip.c  test_compress_roundtrip.csv  test_compressor.c  test_forksafe.c  test_getitem.c  test_getitem.csv  test_maxout.c  test_noinit.c  test_nolock.c  test_nthreads.c  test_shuffle_roundtrip_avx2.c  test_shuffle_roundtrip_avx2.csv  test_shuffle_roundtrip_generic.c  test_shuffle_roundtrip_generic.csv  test_shuffle_roundtrip_sse2.c
c-blosc/tests/fuzz/: CMakeLists.txt  fuzz_compress.c  fuzz_decompress.c  standalone.c
ci/: README.md  build.py
contrib/: README  h5_dap_plugin.py  make_hdf.py  nctoh5.py
core/: array.py  group.py  leaf.py  mixin.py
debian/: README.Debian  changelog  changelog.in  control  control.in  copyright  create-mini-repository.sh  make.sh  nctoh5.1  ptdump.1  ptrepack.1  rules  rules.in
doc/: Makefile  Makefile_windows  New-Backend-Interface.rst  make.bat  objecttree.dia  rootUEP1.fig
doc/source/release-notes/hdf5/: CMakeLists.txt  README.rst  blosc_filter.c
doc/source/release-notes/tests/: CMakeLists.txt  Makefile  test_all.sh  test_api.c  test_common.h
examples/: Single_Table-vs-EArray_Table.ipynb  add-column.py  array1.py  array2.py  array3.py  array4.py  attributes1.py  attrs-with-padding.py  carray1-opt.py  carray1.py  check_examples.sh  direct-chunk-shape.py  direct-chunking.py  dumpFile.py  earray1.py  earray2.py  enum.py  enum1.py  example1.py  example2.py  example3.py  (+39 more)
hdf5-blosc/: .gitignore  .travis.yml  CMakeLists.txt  README.rst  travis-before-install.sh
hdf5-blosc/LICENSES/: BLOSC.txt  BLOSC_HDF5.txt  H5PY.txt
hdf5-blosc/src/: blosc_filter.c  blosc_filter.h  blosc_plugin.c  blosc_plugin.h  example.c
(+633 files in other folders)
